# invoke

./: CMakeLists.txt  LICENSE
src/: Invoker.cpp  Invoker.hpp  InvokerConfig.cpp  InvokerConfig.hpp  InvokerProfile.cpp  InvokerProfile.hpp  SyscallTable.hpp  main.cpp
src/invokers/linux_native/: PtraceInvoker.cpp  PtraceInvoker_x86_64.cpp
src/invokers/ptrace/: PtraceInvoker.cpp  PtraceInvoker.hpp  PtraceInvoker_x86_64.cpp  PtraceInvoker_x86_64.hpp
src/profiles/: generate.py  linux_native.cpp  linux_native.hpp  linux_native.json  linux_nosecurity.cpp  linux_nosecurity.hpp  linux_nosecurity.json
src/tables/: generate.py  linux_i386.cpp  linux_i386.hpp  linux_i386.tbl  linux_x86_64.cpp  linux_x86_64.hpp  linux_x86_64.tbl
